# TC2017

./: .gitignore  .gitmodules  README.md
E2E/Cyclops/: Cyclops-log.sh  Cyclops.sh  README  cyclops_all_node.launch  rosbagCyclops.launch
E2E/Cyclops/PlaNet_L/CNN/: test.py  (+10 more)
E2E/Cyclops/pure_pursuit/: pure_pursuit.cpp
Maps/meidai/: README.md  nu_garden_map-wp1.kml  nu_garden_map-wp2.kml  nu_garden_map.kml  trainx1wp.csv  trainx2wp.csv
Maps/takeda-ken/: README.md  left-turn.csv  straight.csv  takeda_lab.kml
Maps/tsukuba/: README.md  saved_waypoints.csv  tsukuba_second-map.kml
RobotControl/ssm-shspur-ros/: AutoKerberos.sh  Automove-log.sh  Automove.sh  automove_all_node.launch  kerberos_all_node-no-joy.launch  kerberos_all_node.launch  rosbag-dvs.launch  rosbag.launch
RobotControl/ssm-shspur-ros/catkin_ws/src/cnnjoyteleop/: CMakeLists.txt  package.xml
RobotControl/ssm-shspur-ros/catkin_ws/src/cnnjoyteleop/src/: cnnjoyteleop.cpp
RobotControl/ssm-shspur-ros/catkin_ws/src/joyteleop/: CMakeLists.txt  package.xml
RobotControl/ssm-shspur-ros/catkin_ws/src/joyteleop/src/: joyteleop.cpp
RobotControl/ssm-shspur-ros/sh_spur-0.11/utilities/param_tuner/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  interface.c.bak  main.c  main.c~  param_tuner
RobotControl/ssm-shspur-ros/sh_spur-0.11/utilities/param_tuner/src/.deps/: callbacks.P  callbacks.Po  interface.P  interface.Po  main.P  main.Po  support.P  support.Po
RobotControl/ssm-shspur-ros/sh_spur-0.11/utilities/param_tuner/src/include/: SHSpur.h  SHSpur.h~  command.h  command.h~  draw.h  param.h  param.h~  param_lon.h  parameter.h  serial.h  serial.h~  sh_spur.h
(+255 files in other folders)
